--- a/Liar_codes.ipynb
+++ b/Liar_codes.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir= 'O:\\Second Semister\\dissertation\\dis-dataset' \n",
+    "base_dir= '. \n",
     "dataset= 'liar_dataset'\n",
     "data_dir= os.path.join(base_dir, dataset)"
    ]
