--- a/Gossipcop.ipynb
+++ b/Gossipcop.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir= 'O:\\Second Semister\\dissertation\\dis-dataset' \n",
+    "base_dir= '.' \n",
     "dataset= 'GossioCop'\n",
     "data_dir= os.path.join(base_dir, dataset)"
    ]
